[metadata]
name = Xg
version = 0.0.1
author = Tom George Ampiath
author_email = tgampiath@gmail.com
description = A cross platform GUI framework for Python3 using Opengl and GLFW
url = https://github.com/TomAmpiath/Xg

[options]
zip_safe = True
include_package_data = True
package_dir = 
    = ./
packages = find:
python_requires = >=3.7

[options.packages.find]
; The option `package_dir` is not enough to include all files,
; this section is also required to find all module files.
where = ./
